fixed spacing, mostly for buttons

--- a/frontend/frontend/src/pages/resumeform.css
+++ b/frontend/frontend/src/pages/resumeform.css
@@ -130,8 +130,21 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
     max-width: 1050px;
+    max-height: 50px;
+    margin: 15px;
+}
+
+.placeholder{
+    width: 90px;
+    height: 50px;
+}
+
+.progress-indicator {
+    font-weight: 600;
+    margin-bottom: 55px;
 }
 
 .prog-btn-btn{
